fixtures/errors/arr_concat_unimplemented.js
// reserved for future use (array methods not yet dispatched as builtins)
let a = true;
console.log(a);
